--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "example": "example"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,17 @@
   "bugs": {
     "url": "https://github.com/ajwhite/react-predicate/issues"
   },
-  "homepage": "https://github.com/ajwhite/react-predicate#readme"
+  "homepage": "https://github.com/ajwhite/react-predicate#readme",
+  "devDependencies": {
+    "babel-jest": "^18.0.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "enzyme": "^2.7.1",
+    "jest": "^18.1.0",
+    "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-test-renderer": "^15.4.2"
+  }
 }
